--- a/Workspace/MoneyTor/war/users.html
+++ b/Workspace/MoneyTor/war/users.html
@@ -291,162 +291,178 @@ a {
 					12 </a>
 			</div>
 		</div>
-		
 
-	<div id="userSettings" class="ui modal">
-		<div class="header">User Settings</div>
-		<div class="content">
-			<form class="ui form">
 
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Username</label>
-					</div>
-					<div class="fourteen wide field">josephpalmaras</div>
-				</div>
+		<div id="userSettings" class="ui modal">
+			<div class="header">User Settings</div>
+			<div class="content">
+				<form class="ui form">
 
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Password</label>
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Username</label>
+						</div>
+						<div class="fourteen wide field">josephpalmaras</div>
 					</div>
-					<div class="fourteen wide field">
-						<text>****** </text>
-						<a href="#">change password</a>
-					</div>
-				</div>
 
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Name</label>
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Password</label>
+						</div>
+						<div class="fourteen wide field">
+							<text>****** </text>
+							<a href="#">change password</a>
+						</div>
 					</div>
-					<div class="fourteen wide field">
-						<input type="text" value="Joseph Gabriell Palmaras" />
-					</div>
-				</div>
-			</form>
-		</div>
-		<div class="actions">
-			<div class="ui approve button teal">Save</div>
-			<div class="ui cancel button teal">Cancel</div>
-		</div>
-	</div>
 
-	<!-- employee INFORMATION  -->
-	<div id="addemployee" class="ui modal">
-		<div class="header">employee</div>
-		<div class="content">
-			<form class="ui form">
-
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>First Name</label>
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Name</label>
+						</div>
+						<div class="fourteen wide field">
+							<input type="text" value="Joseph Gabriell Palmaras" />
+						</div>
 					</div>
-					<div class="fourteen wide field">
-						<input type="text">
-					</div>
-				</div>
-
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Last Name</label>
-					</div>
-					<div class="fourteen wide field">
-						<input type="text">
-					</div>
-				</div>
-
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Username</label>
-					</div>
-					<div class="fourteen wide field">
-						<input type="text">
-					</div>
-				</div>
-
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Password</label>
-					</div>
-					<div class="seven wide field">
-						<input type="number">
-					</div>
-				</div>
-
-			</form>
-		</div>
-		<div class="actions">
-			<div class="ui approve button">Save</div>
-			<div class="ui button">Add More</div>
-			<div class="ui cancel button">Cancel</div>
-		</div>
-	</div>
-
-	<!-- administrator INFORMATION  -->
-	<div id="addadministrator" class="ui modal">
-		<div class="header">Administrator</div>
-		<div class="content">
-			<form class="ui form">
-
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>First Name</label>
-					</div>
-					<div class="fourteen wide field">
-						<input type="text">
-					</div>
-				</div>
-
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Last Name</label>
-					</div>
-					<div class="fourteen wide field">
-						<input type="text">
-					</div>
-				</div>
-
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Username</label>
-					</div>
-					<div class="fourteen wide field">
-						<input type="text">
-					</div>
-				</div>
-
-				<div class="inline fields">
-					<div class="two wide field">
-						<label>Password</label>
-					</div>
-					<div class="seven wide field">
-						<input type="number">
-					</div>
-				</div>
-
-			</form>
-		</div>
-		<div class="actions">
-			<div class="ui approve button">Save</div>
-			<div class="ui button">Add More</div>
-			<div class="ui cancel button">Cancel</div>
-		</div>
-	</div>
-
-	<div id="logout" class="ui small test modal transition"
-		style="margin-top: -92.5px;">
-		<div class="header">Log out</div>
-		<div class="content">
-			<p>Are you sure you want to log out of your account</p>
-		</div>
-		<div class="actions">
-			<div class="ui negative button">No</div>
-			<div class="ui positive right labeled icon button">
-				Yes <i class="checkmark icon"></i>
+				</form>
+			</div>
+			<div class="actions">
+				<div class="ui approve button teal">Save</div>
+				<div class="ui cancel button teal">Cancel</div>
 			</div>
 		</div>
-	</div>
 
+		<!-- employee INFORMATION  -->
+		<div id="addemployee" class="ui modal">
+			<div class="header">employee</div>
+			<div class="content">
+				<form class="ui form">
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>First Name</label>
+						</div>
+						<div class="fourteen wide field">
+							<input type="text">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Last Name</label>
+						</div>
+						<div class="fourteen wide field">
+							<input type="text">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Username</label>
+						</div>
+						<div class="fourteen wide field">
+							<input type="text">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Password</label>
+						</div>
+						<div class="seven wide field">
+							<input type="number">
+						</div>
+					</div>
+					
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Confirm Password</label>
+						</div>
+						<div class="seven wide field">
+							<input type="number">
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="actions">
+				<div class="ui approve button">Save</div>
+				<div class="ui button">Add More</div>
+				<div class="ui cancel button">Cancel</div>
+			</div>
+		</div>
+
+		<!-- administrator INFORMATION  -->
+		<div id="addadministrator" class="ui modal">
+			<div class="header">Administrator</div>
+			<div class="content">
+				<form class="ui form">
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>First Name</label>
+						</div>
+						<div class="fourteen wide field">
+							<input type="text">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Last Name</label>
+						</div>
+						<div class="fourteen wide field">
+							<input type="text">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Username</label>
+						</div>
+						<div class="fourteen wide field">
+							<input type="text">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Password</label>
+						</div>
+						<div class="seven wide field">
+							<input type="number">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Confirm Password</label>
+						</div>
+						<div class="seven wide field">
+							<input type="number">
+						</div>
+					</div>
+
+				</form>
+			</div>
+			<div class="actions">
+				<div class="ui approve button">Save</div>
+				<div class="ui button">Add More</div>
+				<div class="ui cancel button">Cancel</div>
+			</div>
+		</div>
+
+		<div id="logout" class="ui small test modal transition"
+			style="margin-top: -92.5px;">
+			<div class="header">Log out</div>
+			<div class="content">
+				<p>Are you sure you want to log out of your account</p>
+			</div>
+			<div class="actions">
+				<div class="ui negative button">No</div>
+				<div class="ui positive right labeled icon button">
+					Yes <i class="checkmark icon"></i>
+				</div>
+			</div>
+		</div>
 </body>
 <script type="text/javascript">
 	/* 	$('.ui .item').on('click', function() {
