--- a/Workspace/MoneyTor/war/main.html
+++ b/Workspace/MoneyTor/war/main.html
@@ -135,7 +135,6 @@
 	  <table class="ui celled padded table">
 	  <thead>
 	    <tr>
-	    <th>ID <i class="dropdown icon link" style="float:right"></i></th>
 	    <th>OR No. <i class="dropdown icon link" style="float:right"></i></th>
 	    <th>Supplier <i class="dropdown icon link" style="float:right"></i></th>
 	    <th>Amount <i class="dropdown icon link" style="float:right"></i></th>
@@ -145,50 +144,44 @@
 	  </thead>
 	  <tbody>
 	  	<tr>
-	  	<th>10</th>
 	    <th>001823</th>
-	    <th><a href="#">Ivan Wesley Chua</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
-	    <th>P10,000.00</th>
+	    <th><a href="#">Henwill Marketing</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
+	    <th>P3,000.00</th>
 	    <th>August 18, 2015</th>
 	    <th>September 18, 2015</th>
 	  	</tr>
 	  	<tr>
-	  	<th>7</th>
 	    <th>001724</th>
-	    <th><a href="#">Jean Lim</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
-	    <th>P13,400.00</th>
+	    <th><a href="#">SM Entertainment</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
+	    <th>P16,400.00</th>
 	    <th>August 12, 2015</th>
 	    <th>September 19, 2015</th>
 	  	</tr>
 	  	<tr>
-	  	<th>6</th>
 	    <th>001611</th>
-	    <th><a href="#">Klifford Kho</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
-	    <th>P1,300.00</th>
+	    <th><a href="#">VECO</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
+	    <th>P10,000.00</th>
 	    <th>August 11, 2015</th>
 	    <th>October 1, 2015</th>
 	  	</tr>
 	  	<tr>
-	  	<th> 4</th>
 	    <th>001610</th>
 	    <th><a href="#">Curt Co</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
-	    <th>P100.00</th>
+	    <th>P700.00</th>
 	    <th>August 11, 2015</th>
 	    <th>October 1, 2015</th>
 	  	</tr>
 	  	<tr>
-	  	<th>3</th>
 	    <th>001599</th>
 	    <th><a href="#">Kiefer Lim</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
-	    <th>P54,000.00</th>
+	    <th>P5,000.00</th>
 	    <th>August 9, 2015</th>
 	    <th>January 12, 2016</th>
 	  	</tr>
 	  	<tr>
-	  	<th>2</th>
 	    <th>001566</th>
-	    <th><a href="#" style="color:red">George Ong</a>   <a href="#" id="eicon" style="color:red" onClick="editData()"><i class="edit icon"></i></a></th>
-	    <th>P500.00</th>
+	    <th><a href="#" style="color:red">Whats App</a>   <a href="#" id="eicon" style="color:red" onClick="editData()"><i class="edit icon"></i></a></th>
+	    <th>P1300.00</th>
 	    <th>August 8, 2015</th>
 	    <th>August 25 , 2015</th>
 	  	</tr>
@@ -211,7 +204,7 @@
 	    12
 	  </a>
 	</div>
-	<b>Total Amount: </b> P30,700.00</p>
+	<b>Total Amount: </b> P36,400.00</p>
 	</div>
 	
 		<div class="ui bottom attached tab segment" data-tab="receivablesTab" style="padding-bottom:50px">
@@ -240,7 +233,6 @@
 		  <table class="ui celled padded table">
 		  <thead>
 		    <tr>
-		    <th>ID <i class="dropdown icon link" style="float:right"></i></th>
 		    <th>OR No. <i class="dropdown icon link" style="float:right"></i></th>
 		    <th>Customer <i class="dropdown icon link" style="float:right"></i></th>
 		    <th>Amount <i class="dropdown icon link" style="float:right"></i></th>
@@ -250,7 +242,6 @@
 		  </thead>
 		  <tbody>
 		  	<tr>
-		  	<th>12</th>
 		    <th>001823</th>
 		    <th><a href="#">Ivan Wesley Chua</a>      <a href="#" id="eicon" onClick="editDataR()"><i class="edit icon"></i></a></th>
 		    <th>P10,000.00</th>
@@ -258,7 +249,6 @@
 		    <th>September 18, 2015</th>
 		  	</tr>
 		  	<tr>
-		  	<th>11</th>
 		    <th>001724</th>
 		    <th><a href="#">Jean Lim</a>   <a href="#" id="eicon" onClick="editDataR()"><i class="edit icon"></i></a></th>
 		    <th>P13,400.00</th>
@@ -266,7 +256,6 @@
 		    <th>September 19, 2015</th>
 		  	</tr>
 		  	<tr>
-		  	<th>9</th>
 		    <th>001611</th>
 		    <th><a href="#">Klifford Kho</a>   <a href="#" id="eicon" onClick="editDataR()"><i class="edit icon"></i></a></th>
 		    <th>P1,300.00</th>
@@ -274,7 +263,6 @@
 		    <th>October 1, 2015</th>
 		  	</tr>
 		  	<tr>
-		  	<th>8</th>
 		    <th>001610</th>
 		    <th><a href="#">Curt Co</a>   <a href="#" id="eicon" onClick="editDataR()"><i class="edit icon"></i></a></th>
 		    <th>P100.00</th>
@@ -282,7 +270,6 @@
 		    <th>October 1, 2015</th>
 		  	</tr>
 		  	<tr>
-		  	<th>5</th>
 		    <th>001599</th>
 		    <th><a href="#">Kiefer Lim</a>   <a href="#" id="eicon" onClick="editDataR()"><i class="edit icon"></i></a></th>
 		    <th>P54,000.00</th>
@@ -290,7 +277,6 @@
 		    <th>January 12, 2016</th>
 		  	</tr>
 		  	<tr>
-		  	<th>1</th>
 		    <th>001566</th>
 		    <th><a href="#">George Ong</a>   <a href="#" id="eicon" onClick="editDataR()"><i class="edit icon"></i></a></th>
 		    <th>P500.00</th>
@@ -316,7 +302,7 @@
 		    12
 		  </a>
 		</div>
-		<b>Total Amount: </b> P30,700.00</p>
+		<b>Total Amount: </b> P79,300.00</p>
 	</div>
 		<div class="ui bottom attached tab segment" data-tab="suppliersTab" style="padding-bottom:50px">
 			<div class="ui form ">
