--- a/Workspace/MoneyTor/war/users.html
+++ b/Workspace/MoneyTor/war/users.html
@@ -8,7 +8,7 @@
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 <!-- Site Properities -->
-<title>Main Page</title>
+<title>User Management</title>
 <link rel="stylesheet" type="text/css"
 	href="../dist/components/reset.css">
 <link rel="stylesheet" type="text/css"
@@ -130,66 +130,45 @@ a {
 			<table class="ui celled padded table">
 				<thead>
 					<tr>
+						<th>Username <i class="dropdown icon link"
+							style="float: right"></i></th>
 						<th>First Name <i class="dropdown icon link"
 							style="float: right"></i></th>
 						<th>Last Name <i class="dropdown icon link"
-							style="float: right"></i></th>
-						<th>Username <i class="dropdown icon link"
-							style="float: right"></i></th>
-						<th>Password <i class="dropdown icon link"
-							style="float: right"></i></th>
-						<th>Date Created <i class="dropdown icon link"
-							style="float: right"></i></th>
-						<th>Date Updated <i class="dropdown icon link"
 							style="float: right"></i></th>
 						<th></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<th>Ivan</th>
-						<th>Chua</th>
-						<th>ivanchua</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
-					</tr>
-					<tr>
-						<th>Trisha</th>
-						<th>Lim</th>
-						<th>trishalim</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
-					</tr>
-					<tr>
+						<th>dksandimas</th>
 						<th>DK</th>
 						<th>Sandimas</th>
-						<th>dksandimas</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
+						<th><button class="ui button teal" id="editemployeeBtn">edit</button></th>
 					</tr>
 					<tr>
+						<th>ivanchua</th>
+						<th>Ivan</th>
+						<th>Chua</th>
+						<th><button class="ui button teal" id="editemployeeBtn">edit</button></th>
+					</tr>
+					<tr>
+						<th>jp</th>
 						<th>Joseph</th>
 						<th>Palmaras</th>
-						<th>jp</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
+						<th><button class="ui button teal" id="editemployeeBtn">edit</button></th>
 					</tr>
 					<tr>
+						<th>svd</th>
 						<th>Sonia</th>
 						<th>Vidal</th>
-						<th>svd</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
+						<th><button class="ui button teal" id="editemployeeBtn">edit</button></th>
+					</tr>
+					<tr>
+						<th>trishalim</th>
+						<th>Trisha</th>
+						<th>Lim</th>
+						<th><button class="ui button teal" id="editemployeeBtn">edit</button></th>
 					</tr>
 				</tbody>
 			</table>
@@ -220,66 +199,45 @@ a {
 			<table class="ui celled padded table">
 				<thead>
 					<tr>
+						<th>Username <i class="dropdown icon link"
+							style="float: right"></i></th>
 						<th>First Name <i class="dropdown icon link"
 							style="float: right"></i></th>
 						<th>Last Name <i class="dropdown icon link"
-							style="float: right"></i></th>
-						<th>Username <i class="dropdown icon link"
-							style="float: right"></i></th>
-						<th>Password <i class="dropdown icon link"
-							style="float: right"></i></th>
-						<th>Date Created <i class="dropdown icon link"
-							style="float: right"></i></th>
-						<th>Date Updated <i class="dropdown icon link"
 							style="float: right"></i></th>
 						<th></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<th>Ivan</th>
-						<th>Chua</th>
-						<th>ivanchua</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
-					</tr>
-					<tr>
-						<th>Trisha</th>
-						<th>Lim</th>
-						<th>trishalim</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
-					</tr>
-					<tr>
+						<th>dksandimas</th>
 						<th>DK</th>
 						<th>Sandimas</th>
-						<th>dksandimas</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
+						<th><button class="ui button teal" id="editadministratorBtn">edit</button></th>
 					</tr>
 					<tr>
+						<th>ivanchua</th>
+						<th>Ivan</th>
+						<th>Chua</th>
+						<th><button class="ui button teal" id="editadministratorBtn">edit</button></th>
+					</tr>
+					<tr>
+						<th>jp</th>
 						<th>Joseph</th>
 						<th>Palmaras</th>
-						<th>jp</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
+						<th><button class="ui button teal" id="editadministratorBtn">edit</button></th>
 					</tr>
 					<tr>
+						<th>svd</th>
 						<th>Sonia</th>
 						<th>Vidal</th>
-						<th>svd</th>
-						<th>*******<a href="#">change password</a></th>
-						<th>September 18, 2015</th>
-						<th>September 18, 2015</th>
-						<th><button>edit</button></th>
+						<th><button class="ui button teal" id="editadministratorBtn">edit</button></th>
+					</tr>
+					<tr>
+						<th>trishalim</th>
+						<th>Trisha</th>
+						<th>Lim</th>
+						<th><button class="ui button teal" id="editadministratorBtn">edit</button></th>
 					</tr>
 				</tbody>
 			</table>
@@ -341,7 +299,7 @@ a {
 						<div class="two wide field">
 							<label>First Name</label>
 						</div>
-						<div class="fourteen wide field">
+						<div class="seven wide field">
 							<input type="text">
 						</div>
 					</div>
@@ -350,7 +308,7 @@ a {
 						<div class="two wide field">
 							<label>Last Name</label>
 						</div>
-						<div class="fourteen wide field">
+						<div class="seven wide field">
 							<input type="text">
 						</div>
 					</div>
@@ -359,7 +317,7 @@ a {
 						<div class="two wide field">
 							<label>Username</label>
 						</div>
-						<div class="fourteen wide field">
+						<div class="seven wide field">
 							<input type="text">
 						</div>
 					</div>
@@ -372,7 +330,7 @@ a {
 							<input type="number">
 						</div>
 					</div>
-					
+
 					<div class="inline fields">
 						<div class="two wide field">
 							<label>Confirm Password</label>
@@ -400,7 +358,7 @@ a {
 						<div class="two wide field">
 							<label>First Name</label>
 						</div>
-						<div class="fourteen wide field">
+						<div class="seven wide field">
 							<input type="text">
 						</div>
 					</div>
@@ -409,7 +367,7 @@ a {
 						<div class="two wide field">
 							<label>Last Name</label>
 						</div>
-						<div class="fourteen wide field">
+						<div class="seven wide field">
 							<input type="text">
 						</div>
 					</div>
@@ -418,7 +376,7 @@ a {
 						<div class="two wide field">
 							<label>Username</label>
 						</div>
-						<div class="fourteen wide field">
+						<div class="seven wide field">
 							<input type="text">
 						</div>
 					</div>
@@ -440,12 +398,129 @@ a {
 							<input type="number">
 						</div>
 					</div>
-
 				</form>
 			</div>
 			<div class="actions">
 				<div class="ui approve button">Save</div>
 				<div class="ui button">Add More</div>
+				<div class="ui cancel button">Cancel</div>
+			</div>
+		</div>
+
+<!-- edit employee INFORMATION  -->
+		<div id="editemployee" class="ui modal">
+			<div class="header">employee</div>
+			<div class="content">
+				<form class="ui form">
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>First Name</label>
+						</div>
+						<div class="seven wide field">
+							<input type="text" value="Trisha">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Last Name</label>
+						</div>
+						<div class="seven wide field">
+							<input type="text" value="Lim">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Username</label>
+						</div>
+						<div class="seven wide field">
+							<input type="text" value="trishalim">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Password</label>
+						</div>
+						<div class="seven wide field">
+							<input type="number" value="*******">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Confirm Password</label>
+						</div>
+						<div class="seven wide field">
+							<input type="number">
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="actions">
+				<div class="ui approve button">Save</div>
+				<div class="ui button">Change Status</div>
+				<div class="ui cancel button">Cancel</div>
+			</div>
+		</div>
+
+		<!-- edit administrator INFORMATION  -->
+		<div id="editadministrator" class="ui modal">
+			<div class="header">Administrator</div>
+			<div class="content">
+				<form class="ui form">
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>First Name</label>
+						</div>
+						<div class="seven wide field">
+							<input type="text" value="Trisha">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Last Name</label>
+						</div>
+						<div class="seven wide field">
+							<input type="text" value="Lim">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Username</label>
+						</div>
+						<div class="seven wide field">
+							<input type="text" value="trishalim">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Password</label>
+						</div>
+						<div class="seven wide field">
+							<input type="number" value="*******">
+						</div>
+					</div>
+
+					<div class="inline fields">
+						<div class="two wide field">
+							<label>Confirm Password</label>
+						</div>
+						<div class="seven wide field">
+							<input type="number">
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="actions">
+				<div class="ui approve button">Save</div>
+				<div class="ui button">Change Status</div>
 				<div class="ui cancel button">Cancel</div>
 			</div>
 		</div>
@@ -480,6 +555,14 @@ a {
 		$('#addadministrator').modal('show');
 	});
 
+	$('#editemployeeBtn').click(function() {
+		$('#editemployee').modal('show');
+	});
+
+	$('#editadministratorBtn').click(function() {
+		$('#editadministrator').modal('show');
+	});
+	
 	$('#settingsLink').click(function() {
 		$('#userSettings').modal('show');
 	});
