updated class diagram

--- a/Workspace/MoneyTor/war/main.html
+++ b/Workspace/MoneyTor/war/main.html
@@ -140,6 +140,7 @@
 	    <th>Amount <i class="dropdown icon link" style="float:right"></i></th>
 	    <th>Transaction Date <i class="dropdown icon link" style="float:right"></i></th>
 	    <th>Due Date <i class="dropdown icon link" style="float:right"></i></th>
+	    <th>Edit</th>
 	  	</tr>
 	  </thead>
 	  <tbody>
@@ -152,10 +153,12 @@
 	  	</tr>
 	  	<tr>
 	    <th>001724</th>
-	    <th><a href="#">SM Entertainment</a>   <a href="#" id="eicon" onClick="editData()"><i class="edit icon"></i></a></th>
-	    <th>P16,400.00</th>
+	    <th><a href="#">SM Entertainment</a> </th>
+	    <th>P16,400.00
+	    </th>
 	    <th>August 12, 2015</th>
 	    <th>September 19, 2015</th>
+	    <th> <a href="#" onClick="editData()"><i class="edit icon"></i></a></th>
 	  	</tr>
 	  	<tr>
 	    <th>001611</th>
