--- a/Workspace/MoneyTor/war/index.html
+++ b/Workspace/MoneyTor/war/index.html
@@ -265,9 +265,14 @@
 		<div class="ui bottom attached tab segment" data-tab="suppliersTab" style="padding-bottom:50px">
 			<div class="ui form ">
 		  	<div class="inline fields" style="float:left">
-		    <div class="eleven wide field">
+		     <div class="fifteen wide field">
 		      <label>Entries per page</label>
-		      <input type="number" value="10">
+		      	<select class="ui dropdown">
+				  <option value="5">5</option>
+				  <option value="10">10</option>
+				  <option value="30">30</option>
+				  <option value="100">100</option>
+				</select>
 		    </div>
 		  	
 		    </div>
@@ -312,10 +317,15 @@
 		<div class="ui bottom attached tab segment" data-tab="customersTab" style="padding-bottom:50px">
 			<div class="ui form ">
 		  	<div class="inline fields" style="float:left">
-		    <div class="eleven wide field">
-		      <label>Entries per page</label>
-		      <input type="number" value="10">
-		    </div>
+		     <div class="fifteen wide field">
+	      <label>Entries per page</label>
+	      <select class="ui dropdown">
+			  <option value="5">5</option>
+			  <option value="10">10</option>
+			  <option value="30">30</option>
+			  <option value="100">100</option>
+			</select>
+	    </div>
 		  	
 		    </div>
 		    <div class="three wide feild" style="float:right">
