--- a/Workspace/MoneyTor/war/index.html
+++ b/Workspace/MoneyTor/war/index.html
@@ -287,7 +287,6 @@
 			    <th>Address </th>
 			    <th>Contact </th>
 			    <th>Terms <i class="dropdown icon link" style="float:right"></i></th>
-			    <th>Date Created <i class="dropdown icon link" style="float:right"></i></th>
 			    <th>Date Updated <i class="dropdown icon link" style="float:right"></i></th>
 			    <th>Edit</th>
 			  	</tr>
@@ -299,7 +298,6 @@
 				<th>09184587896</th>
 				<th>14 months</th>
 				<th>September 18, 2015</th>
-				<th>September 18, 2015</th>
 				<th><a href="#"><i class="edit icon editSupplierBtn"></i></a></th>
 			</tr>
 			
@@ -308,7 +306,6 @@
 				<th>P. del Rosario St., Cebu City</th>	
 				<th>09164587892</th>
 				<th>17 months</th>
-				<th>July 18, 2015</th>
 				<th>August 18, 2015</th>
 				<th><a href="#"><i class="edit icon editSupplierBtn"></i></a></th>
 			</tr>
@@ -318,7 +315,6 @@
 				<th>Mountain View, California</th>	
 				<th>09334587879</th>
 				<th>15 months</th>
-				<th>September 18, 2015</th>
 				<th>September 20, 2015</th>
 				<th><a href="#"><i class="edit icon editSupplierBtn"></i></a></th>
 			</tr>
@@ -328,7 +324,6 @@
 				<th>Mainland, China</th>	
 				<th>09178429522</th>
 				<th>13 months</th>
-				<th>December 8, 2015</th>
 				<th>January 1, 2015</th>
 				<th><a href="#"><i class="edit icon editSupplierBtn"></i></a></th>
 			</tr>
@@ -338,7 +333,6 @@
 				<th>Perth, Australia</th>	
 				<th>09478529688</th>
 				<th>10 months</th>
-				<th>October 20, 2015</th>
 				<th>October 27, 2015</th>
 				<th><a href="#"><i class="edit icon editSupplierBtn"></i></a></th>
 			</tr>
@@ -348,7 +342,6 @@
 				<th>Colon St., Cebu City</th>	
 				<th>09428143096</th>
 				<th>6 months</th>
-				<th>November 18, 2015</th>
 				<th>November 18, 2015</th>
 				<th><a href="#"><i class="edit icon editSupplierBtn"></i></a></th>
 			</tr>
@@ -398,68 +391,61 @@
 			    <th>Address </th>
 			    <th>Contact </th>
 			    <th>Terms <i class="dropdown icon link" style="float:right"></i></th>
-			    <th>Date Created <i class="dropdown icon link" style="float:right"></i></th>
 			    <th>Date Updated <i class="dropdown icon link" style="float:right"></i></th>
 			    <th>Edit</th>
 			  	</tr>
 			  </thead>
 			  <tbody>
 			<tr>			  	
-				<th>Ivan Suah </th>
+				<th>Hyoyeon Kim</th>
 				<th>Mainland, China</th>	
 				<th>09184587896</th>
 				<th>14 months</th>
-				<th>September 18, 2015</th>
 				<th>September 18, 2015</th>
 				<th><a href="#"><i class="edit icon editCustomerBtn"></i></a></th>
 			</tr>
 			
 			<tr>	
-				<th>Jacq Lim </th>
+				<th>Taeyeon Kim</th>
 				<th>P. del Rosario St., Cebu City</th>	
 				<th>09164587892</th>
 				<th>17 months</th>
-				<th>July 18, 2015</th>
 				<th>August 18, 2015</th>
 				<th><a href="#"><i class="edit icon editCustomerBtn"></i></a></th>
 			</tr>
 			
 			<tr>			  		
-				<th>Lee Roy </th>
+				<th>Sunny Lee</th>
 				<th>Mountain View, California</th>	
 				<th>09334587879</th>
 				<th>15 months</th>
-				<th>September 18, 2015</th>
 				<th>September 20, 2015</th>
 				<th><a href="#"><i class="edit icon editCustomerBtn"></i></a></th>
 			</tr>
 			
 			<tr>	
-				<th>Fish Dior </th>
+				<th>Jessica Jung</th>
 				<th>Mainland, China</th>	
 				<th>09178429522</th>
 				<th>13 months</th>
-				<th>December 8, 2015</th>
 				<th>January 1, 2015</th>
 				<th><a href="#"><i class="edit icon editCustomerBtn"></i></a></th>
 			</tr>
 			
 			<tr>	
-				<th>Jackson Wang</th>
+				<th>Tiffany Huang</th>
 				<th>Perth, Australia</th>	
 				<th>09478529688</th>
 				<th>10 months</th>
-				<th>October 20, 2015</th>
 				<th>October 27, 2015</th>
 				<th><a href="#"><i class="edit icon editCustomerBtn"></i></a></th>
 			</tr>
 			
 			<tr>	
-				<th>Iron Pal </th>
+				<th>Soo Young Choi</th>
 				<th>Colon St., Cebu City</th>	
 				<th>09428143096</th>
 				<th>6 months</th>
-				<th>November 18, 2015</th>
 				<th>November 18, 2015</th>
 				<th><a href="#"><i class="edit icon editCustomerBtn"></i></a></th>
 			</tr>
